--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 13,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 14,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
        "True"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 15,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,15 +248,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 7/7 [00:05<00:00,  1.22it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18150255c75a40178058f502d3b993b2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/7 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -273,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 20,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -283,16 +290,16 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is the stout, heavily built young man with close-cropped hair and spectacles?\n",
+       "            <b>Question:</b> Who is Anna Pavlovna referring to when she says \"You know,\" and then proceeds to ask what the war is for?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The stout, heavily built young man with close-cropped hair and spectacles is an illegitimate son of Count Bezukhov and was educated abroad. His name is Pierre.\n",
+       "            <b>Answer:</b> Anna Pavlovna is referring to the little princess, who is asking Prince Vasili about the purpose of the war.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who entered the drawing room in the last context?\n",
+       "            <b>Question:</b> Who entered the drawing room just then and was addressed by Anna Pavlovna?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
        "            <b>Answer:</b> Prince Andrew Bolkonski, the little princess' husband.\n",
@@ -301,10 +308,10 @@
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What is Prince Hippolyte doing as the conversation comes to an end?\n",
+       "            <b>Question:</b> What was Prince Hippolyte's reaction to Anna Pavlovna's question about seeing Pierre again?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Hippolyte begins whispering something to the little princess and then runs out to the porch to follow her into the carriage.\n",
+       "            <b>Answer:</b> Prince Hippolyte's reaction was to express joy and delight at the evening, saying he was glad he did not go to the ambassador's, and that it had been a delightful evening. He also snatched the shawl from the footman, wrapped it around the princess, and kept his arm around her for a long time, as though embracing her.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
@@ -313,31 +320,33 @@
        "            <b>Question:</b> Who was Pierre staying with at Prince Vasili Kuragin's?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre was staying with Prince Vasili Kuragin and sharing the dissipated life of his son Anatole.\n",
+       "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole, the son whom they were planning to reform by marrying him to Prince Andrew's sister.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who entered the drawing room with her daughter in a rustling dress?\n",
+       "            <b>Question:</b> Who was the first person to attempt the dangerous bet of drinking a whole bottle of rum without taking it from his mouth?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> A tall, stout, and proud-looking woman with a round-faced smiling daughter.\n",
+       "            <b>Answer:</b> Dolokhov was the first person to attempt the dangerous bet of drinking a whole bottle of rum without taking it from his mouth.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the visitor addressing when she asked if Mimi was a relation of hers?\n",
+       "            <b>Question:</b> Who are the younger generation of family members settled in the drawing room?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The visitor was addressing Natasha.\n",
+       "            <b>Answer:</b> The younger generation of family members includes Boris, the officer, Anna Mikhaylovna's son; Nicholas, the undergraduate, the count's eldest son; Sonya, the count's fifteen-year-old niece, and little Petya, his youngest boy.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> How long does the man suggest waiting before asking for Natasha's hand in marriage?\n",
+       "            <b>Question:</b> er. \"All right, I will wait. But it's a long time!\" she added, turning to Pierre.\n",
+       "\n",
+       "How long does Pierre ask Natasha to wait before he will ask for her hand in marriage?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
        "            <b>Answer:</b> In another four years.\n",
