--- a/example/transform/openai_long_text_splitter.ipynb
+++ b/example/transform/openai_long_text_splitter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,10 +64,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "b12b5bd5",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/chenzhihan/Library/Python/3.9/lib/python/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -95,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "8d84dd70",
    "metadata": {},
    "outputs": [
@@ -105,7 +113,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "dfe82668",
    "metadata": {},
    "outputs": [
@@ -188,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,13 +256,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18150255c75a40178058f502d3b993b2",
+       "model_id": "56277ec3d40545779e8cf3de3ad3f0ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "74ccffb8",
    "metadata": {},
    "outputs": [
@@ -290,16 +298,16 @@
        "\n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who is Anna Pavlovna referring to when she says \"You know,\" and then proceeds to ask what the war is for?\n",
+       "            <b>Question:</b> Who is the illegitimate son of Count Bezukhov?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Anna Pavlovna is referring to the little princess, who is asking Prince Vasili about the purpose of the war.\n",
+       "            <b>Answer:</b> The illegitimate son of Count Bezukhov is Pierre.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who entered the drawing room just then and was addressed by Anna Pavlovna?\n",
+       "            <b>Question:</b> Who entered the drawing room just as the vicomte was telling his tale and engaged in conversation with Prince Andrew?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
        "            <b>Answer:</b> Prince Andrew Bolkonski, the little princess' husband.\n",
@@ -308,45 +316,43 @@
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> What was Prince Hippolyte's reaction to Anna Pavlovna's question about seeing Pierre again?\n",
+       "            <b>Question:</b> What did Prince Andrew ask his wife as they were leaving the soiree?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Prince Hippolyte's reaction was to express joy and delight at the evening, saying he was glad he did not go to the ambassador's, and that it had been a delightful evening. He also snatched the shawl from the footman, wrapped it around the princess, and kept his arm around her for a long time, as though embracing her.\n",
+       "            <b>Answer:</b> \"Are you ready?\"\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was Pierre staying with at Prince Vasili Kuragin's?\n",
+       "            <b>Question:</b> What is the dissipated life that Pierre is sharing with Prince Vasili Kuragin's son Anatole?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Pierre was staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole, the son whom they were planning to reform by marrying him to Prince Andrew's sister.\n",
+       "            <b>Answer:</b> Pierre is staying at Prince Vasili Kuragin's and sharing the dissipated life of his son Anatole, which includes debauchery and dissipation.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who was the first person to attempt the dangerous bet of drinking a whole bottle of rum without taking it from his mouth?\n",
+       "            <b>Question:</b> What type of activity were the guests engaged in at the large house near the Horse Guards' barracks?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> Dolokhov was the first person to attempt the dangerous bet of drinking a whole bottle of rum without taking it from his mouth.\n",
+       "            <b>Answer:</b> The guests were engaged in playing cards and having supper. Some of the young men were also betting and engaging in rowdy behavior.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> Who are the younger generation of family members settled in the drawing room?\n",
+       "            <b>Question:</b> Who are the members of the younger generation in the drawing room?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
-       "            <b>Answer:</b> The younger generation of family members includes Boris, the officer, Anna Mikhaylovna's son; Nicholas, the undergraduate, the count's eldest son; Sonya, the count's fifteen-year-old niece, and little Petya, his youngest boy.\n",
+       "            <b>Answer:</b> The younger generation in the drawing room includes Boris, the officer, Anna Mikhaylovna's son; Nicholas, the undergraduate, the count's eldest son; Sonya, the count's fifteen-year-old niece, and little Petya, his youngest boy.\n",
        "        </div>\n",
        "    </div>\n",
        "    \n",
        "    <div style=\"margin-bottom: 20px;\">\n",
        "        <div style=\"background-color: #f0f0f0; padding: 10px; border-radius: 5px;\">\n",
-       "            <b>Question:</b> er. \"All right, I will wait. But it's a long time!\" she added, turning to Pierre.\n",
-       "\n",
-       "How long does Pierre ask Natasha to wait before he will ask for her hand in marriage?\n",
+       "            <b>Question:</b> How many years does the man say he will ask for Natasha's hand in marriage?\n",
        "        </div>\n",
        "        <div style=\"background-color: #d9edf7; padding: 10px; border-radius: 5px; margin-top: 5px;\">\n",
        "            <b>Answer:</b> In another four years.\n",
