polish gmail filter

--- a/example/application/gmail_filter.ipynb
+++ b/example/application/gmail_filter.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Install the dependencies\""
+    "Install the dependencies"
    ]
   },
   {
@@ -105,6 +105,8 @@
    "source": [
     "### Initialize an `ExtractClient` with `ExtractGmailConfig`\n",
     "\n",
+    "There are two steps to build an Gmail spam filter: extract the email content and then classify whether it's spam. Let's start with the extract step.\n",
+    "\n",
     "<div style=\"border-left: 4px solid lightblue; background-color: lightblue; color: white; padding: 10px 20px; margin: 20px 0;\">\n",
     "\n",
     "### Set credentials\n",
@@ -119,17 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please visit this URL to authorize this application: https://accounts.google.com/o/oauth2/auth?response_type=code&client_id=3802882817-55l16leinn8labkqeto6nf6ec5769163.apps.googleusercontent.com&redirect_uri=http%3A%2F%2Flocalhost%3A55994%2F&scope=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fgmail.modify&state=30iKJCsOY92EhaoqAvR6hqKBu6zdQA&access_type=offline\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "extract_client = ExtractClient(\n",
     "    ExtractGmailConfig(\n",
@@ -145,7 +139,7 @@
    "source": [
     "Once run the above cell, there will be a pop up URL to authorize the Gmail log in from your own gmail spam filter. \n",
     "\n",
-    "Click `Allow`.\n",
+    "Click `Allow`:\n",
     "\n",
     "<p align=\"center\">\n",
     "  <img src=\"./gmail-spam-filter-login.png\" alt=\"Alternate Text\" width=\"50%\" />\n",
@@ -156,9 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use the `extract_client` to extract the latest unread email body and snippet (maximum 10 emails). \n",
-    "\n",
-    "Estimated running time: 10-20 seconds."
+    "Now use the `extract_client` to extract the latest unread email body and snippet (maximum 10 emails). Estimated running time: 10-20 seconds."
    ]
   },
   {
@@ -184,7 +176,7 @@
    "source": [
     "### Initialize an `TransformClient` with `TransformGmailSpamConfig`\n",
     "\n",
-    "Now we have used the `Extract` client to retrieve all the email's text. Now we will define a `Transform` client to classify whether an given email is spam or not. The default `TransformGmailSpamConfig` contains instructions and few shots prompt regarding spam classification task."
+    "Now you have retrieved the email's text using the `Extract` client. Now we define a `Transform` client to classify whether an given email is spam or not. The default `TransformGmailSpamConfig` contains instructions and few shots prompt regarding spam classification task."
    ]
   },
   {
@@ -209,7 +201,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "The `transform_client` will take the extract result from `extract_client` and further transform it with output contains classification label."
+    "The `transform_client` will take the extract result from `extract_client` and further transform it with output contains classification label. Let's print out the default `TransformGmailSpamConfig` to see the default prompts and model configs."
    ]
   },
   {
@@ -251,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +252,7 @@
        "Context(email=b'Hello,\\r\\n\\r\\nAs Anthropic develops new features and expands our capabilities ( https://www.anthropic.com/news/claude-3-family ) , we\\xe2\\x80\\x99re making a few updates to our Privacy Policy and terms to provide more clarity about our practices.\\r\\n\\r\\nWe encourage you to read the full update, but here\\xe2\\x80\\x99s a quick summary:\\r\\n\\r\\n*Privacy Policy and terms updates*\\r\\n\\r\\n* With the launch of \\xe2\\x80\\x9cvision\\xe2\\x80\\x9d\\xe2\\x80\\x93 a way to prompt the services with photos and images \\xe2\\x80\\x93 updates to the policy clarify how you can submit different file types and information to the AI services.\\r\\n* We explain our legal bases for processing personal data under certain global laws.\\r\\n* We reference a separate Cookie Policy ( https://www.anthropic.com/legal/cookies ) and Cookie Table ( https://support.anthropic.com/en/articles/9020432 ) , and explain choices and controls we offer to users when we are promoting our AI services.\\r\\n* We clarified that the Consumer Terms ( https://www.anthropic.com/legal/consumer-terms ) apply when using Claude.ai as an individual and the Commercial Terms ( https://www.anthropic.com/legal/commercial-terms ) apply when using the Anthropic API, the Anthropic Console, or any other Anthropic offerings linking to those Terms.\\r\\n\\r\\n*Beta Console Chat Migration:* If you were previously using the Beta chat functionality in our API Console, we have migrated your chats to the Claude.ai accounts associated with that email address. If you would like for us to delete those messages, please let us know within the next 30 days after which the messages will be treated as conversations in the Claude.ai account.\\r\\n\\r\\nYou can review the updated Privacy Policy ( https://www.anthropic.com/legal/privacy ) , Terms ( https://www.anthropic.com/legal/commercial-terms ) and Cookie Policy ( https://www.anthropic.com/legal/cookies ) on our website. By continuing to use our services after March 4, 2024, you acknowledge that our Privacy Policy applies to data processed in Anthropic\\xe2\\x80\\x99s services. If you have any questions, please reach out at privacy@anthropic.com.\\r\\n\\r\\nWe appreciate you taking the time to stay informed on these updates as we work to responsibly deploy our products more broadly.\\r\\n\\r\\nWarmly,\\r\\nThe Anthropic team\\r\\n\\r\\n( https://twitter.com/anthropicai ) ( https://www.linkedin.com/company/anthropicresearch )\\r\\n\\r\\nUnsubscribe ( https://url8792.mail.anthropic.com/wf/unsubscribe?upn=z2wbd-2F4FYRQK0ogB7tG2MvfcdeKe8nZOcxGWE-2BobYyRbdlP-2FSxEGrc6BrlcSPxI-2BreS77EWe1tUyZ4xYPqkkqXiXPHt4wF5RvE5Kc2c1GB5oPX47W1xRQ6L0sjakNqDUYx68-2FhE9I2EPQoDbghJWpuCBLYt9FPr-2FnWm14xDvvItHqMthomyKXaGr7IXMXeHMjl79va40f-2FwarE5PGEeMQEkqmgfCstvKEdxx05I21xHJ0kuzefOcl4R1CCJvGlp9lGTFvflbhR492L-2FY-2F-2Fvr-2FwIHxwHl0lMUhTAlJx4mPreebsqX8GE-2FTXSWEInvkeqMhWOAQBCNdgcgZfKxh8N31p4-2FzBlirZiPMQEaVw88RBYBw3227qH9PRsIKR3F-2FoWyUfDLuZiwkW5LMWPiTEx019V2rPz-2Bh7AymCqK3j4UufWOIdCCJD7KB33-2F4WwuI72HQPepDTciJE1sl1fOpQLfBat7h-2F6NhtYB9NXBqKJPGlIZ77dEc3i8rgqDDlDvlevPUrH-2FgJKL-2B3hIkhYfHstb-2B9UujqCgj-2Bt9P4-2F362eHOZuXy-2BAZ-2BpsNdia37hF8vUoj22mgbB-2B9AZC-2BiDJ3hnxukVNKcfeEyaOw-2BazQ0n-2BFZquHEjY4ucig5qwK8dXo306Bh0YDX1K-2B-2BLE4BJVE9l-2BWDnQ4mMUphf-2Bofn-2BfbNfOYk1v4-2BaV1IOClz7WZCRV958HNAu6loyIxyiO8uol4QQd26c-2FtbRjKImhmltMWStAEH1FAiW4hzTWWNkyzvMgjDgluuhqEh2gyfyO4qxFO8Le0pojJdZznZ-2BD-2FFH-2BR2fBFncYFc0cnMU-2FIPe88Aw7fJF6lNRf3V1UE-2Ftfste6k4uDLXwWhoD-2BjXshN7D6UnbSuuru1zWtLkfMfAkpSfYwaC3d-2Fq8tebfBRP6rH-2FV9fhFPS61gtYNRsb1E9IEjhZSno6e1SkpbnYC0HkOA5eBFehTEKrEHb-2Fo9SREbhyqfOwAEetlN71Ty7btjMSjb6yOTNycIPL-2B0PhHVu71bGfc-2FAyH-2B )')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
