--- a/example/transform/google_summary_model.ipynb
+++ b/example/transform/google_summary_model.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Notebook for Paper Comparison Flow\n",
     "\n",
-    "In this example, we will show you how to compare aand contrast two papers from given their markdown files using Google's models via uniflow.\n",
+    "In this example, we will show you how to compare two papers from given markdown files using Google's models via uniflow.\n",
     "\n",
     "### Before running the code\n",
     "\n",
