--- a/example/transform/azure_openai_html_QA.ipynb.ipynb
+++ b/example/transform/azure_openai_html_QA.ipynb.ipynb
@@ -436,7 +436,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uniflow",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -454,5 +454,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
