--- a/example/transform/gemma_model_test.ipynb
+++ b/example/transform/gemma_model_test.ipynb
@@ -70,9 +70,11 @@
     "on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously \\\n",
     "protect our intellectual property, including trademarks, patents and trade secrets against third-party \\\n",
     "infringement and misappropriation.\"\"\",\n",
-    "    \"\"\"In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) \\\n",
-    "establishing the theory of information. In his article, Shannon introduced the concept of information entropy \\\n",
-    "for the first time. We will begin our journey here.\"\"\",\n",
+    "    \"\"\"Snoopy can be selfish, gluttonous, and lazy at times, and occasionally mocks his owner, Charlie Brown. \n",
+    "But on the whole, he shows great love, care, and loyalty for his owner (even though he cannot even remember \n",
+    "his name and always refers to him as \"the round-headed kid\"). In the 1990s comic strips, he is obsessed \n",
+    "with cookies, particularly the chocolate-chip variety. This, and other instances in which he indulges in large \n",
+    "chocolate-based meals and snacks, indicate that chocolate is not poisonous to Snoopy, the way it is for real dogs.\"\"\",\n",
     "    \"\"\"The chain rule states that the derivative of a composite function (a function composed of another \\\n",
     "function) is equal to the derivative of the outer function multiplied by the derivative of the inner function.\\\n",
     "Mathematically, it can be written as: \\(\\frac{d}{dx}g(h(x)) = \\frac{dg}{dh}(h(x))\\cdot \\frac{dh}{dx}(x)\\).\"\"\",\n",
@@ -99,7 +101,7 @@
       "\n",
       "Example uniflow context data:\n",
       "[Context(context='We believe our success depends upon our capabilities in areas such as design, research and development, production and marketing and is supported and protected by our intellectual property rights, such as trademarks, utility and design patents, copyrights, and trade secrets, among others. We have followed a policy of applying for and registering intellectual property rights in the United States and select foreign countries on trademarks, inventions, innovations and designs that we deem valuable. W e also continue to vigorously protect our intellectual property, including trademarks, patents and trade secrets against third-party infringement and misappropriation.'),\n",
-      " Context(context='In 1948, Claude E. Shannon published A Mathematical Theory of Communication (Shannon, 1948) establishing the theory of information. In his article, Shannon introduced the concept of information entropy for the first time. We will begin our journey here.')]\n"
+      " Context(context='Snoopy can be selfish, gluttonous, and lazy at times, and occasionally mocks his owner, Charlie Brown. \\nBut on the whole, he shows great love, care, and loyalty for his owner (even though he cannot even remember \\nhis name and always refers to him as \"the round-headed kid\"). In the 1990s comic strips, he is obsessed \\nwith cookies, particularly the chocolate-chip variety. This, and other instances in which he indulges in large \\nchocolate-based meals and snacks, indicate that chocolate is not poisonous to Snoopy, the way it is for real dogs.')]\n"
      ]
     }
    ],
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0be2ca63-1708-440b-9709-6798d9076b8a",
    "metadata": {},
    "outputs": [],
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "2a228817-3905-4453-a4f8-51b5784eb5ec",
    "metadata": {},
    "outputs": [
@@ -149,7 +151,7 @@
       "  warnings.warn(\n",
       "/opt/conda/envs/uniflow/lib/python3.10/site-packages/transformers/models/auto/auto_factory.py:468: FutureWarning: The `use_auth_token` argument is deprecated and will be removed in v5 of Transformers. Please use `token` instead.\n",
       "  warnings.warn(\n",
-      "Loading checkpoint shards: 100%|█████████████████████████████████████████████████████████████████████████████████| 4/4 [00:02<00:00,  1.39it/s]\n"
+      "Loading checkpoint shards: 100%|█████████████████████████████████████████████████████████████████████████████████| 4/4 [00:02<00:00,  1.74it/s]\n"
      ]
     }
    ],
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "1d61f058-3ba6-4463-b942-306a2f983b88",
    "metadata": {},
    "outputs": [
@@ -175,7 +177,7 @@
      "output_type": "stream",
      "text": [
       "HuggingFace model config: \n",
-      "GemmaTransformConfig(flow_name='TransformHuggingFaceGemmaFlow',\n",
+      "GemmaTransformConfig(flow_name='TransformGemmaFlow',\n",
       "                     model_config=GemmaModelConfig(model_name='google/gemma-7b-it',\n",
       "                                                   batch_size=64,\n",
       "                                                   quantization_config=BitsAndBytesConfig {\n",
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "cdc5d5bf-17c6-4d07-b90b-5e4525b1f219",
    "metadata": {},
    "outputs": [
@@ -229,7 +231,7 @@
      "output_type": "stream",
      "text": [
       "  0%|                                                                                                                    | 0/1 [00:00<?, ?it/s]Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:41<00:00, 41.71s/it]\n"
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:12<00:00, 12.86s/it]\n"
      ]
     }
    ],
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "d7fb9996-d5ef-4bfa-bd91-6a01bce765a7",
    "metadata": {},
    "outputs": [
@@ -249,7 +251,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "execution time:  41.716456174850464  seconds\n"
+      "execution time:  12.868847608566284  seconds\n"
      ]
     }
    ],
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "bee02e62-433c-4cc6-b882-900d9e88d881",
    "metadata": {},
    "outputs": [
@@ -269,52 +271,47 @@
      "text": [
       "Sample output:\n",
       "('user\\n'\n",
-      " \"context='In 1948, Claude E. Shannon published A Mathematical Theory of \"\n",
-      " 'Communication (Shannon, 1948) establishing the theory of information. In his '\n",
-      " 'article, Shannon introduced the concept of information entropy for the first '\n",
-      " \"time. We will begin our journey here.'\\n\"\n",
+      " 'instruction: Generate one question and its corresponding answer based on '\n",
+      " 'context. Following the format of the examples below to include the same '\n",
+      " 'context, question, and answer in the response.\\n'\n",
+      " 'context: In 1948, Claude E. Shannon published A Mathematical Theory of\\n'\n",
+      " 'Communication (Shannon, 1948) establishing the theory of\\n'\n",
+      " 'information. In his article, Shannon introduced the concept of\\n'\n",
+      " 'information entropy for the first time. We will begin our journey here.\\n'\n",
+      " 'question: Who published A Mathematical Theory of Communication in 1948?\\n'\n",
+      " 'answer: Claude E. Shannon.\\n'\n",
+      " 'context: Snoopy can be selfish, gluttonous, and lazy at times, and '\n",
+      " 'occasionally mocks his owner, Charlie Brown. \\n'\n",
+      " 'But on the whole, he shows great love, care, and loyalty for his owner (even '\n",
+      " 'though he cannot even remember \\n'\n",
+      " 'his name and always refers to him as \"the round-headed kid\"). In the 1990s '\n",
+      " 'comic strips, he is obsessed \\n'\n",
+      " 'with cookies, particularly the chocolate-chip variety. This, and other '\n",
+      " 'instances in which he indulges in large \\n'\n",
+      " 'chocolate-based meals and snacks, indicate that chocolate is not poisonous '\n",
+      " 'to Snoopy, the way it is for real dogs.\\n'\n",
       " 'model\\n'\n",
-      " 'This text describes the publication of Claude E. Shannon\\'s article \"A '\n",
-      " 'Mathematical Theory of Communication\" in 1948. Here\\'s a breakdown of the '\n",
-      " 'text:\\n'\n",
+      " '**Context:**\\n'\n",
       " '\\n'\n",
-      " '**Key points:**\\n'\n",
+      " 'In 1948, Claude E. Shannon published A Mathematical Theory of Communication '\n",
+      " '(Shannon, 1948) establishing the theory of information. In his article, '\n",
+      " 'Shannon introduced the concept of information entropy for the first time. We '\n",
+      " 'will begin our journey here.\\n'\n",
       " '\\n'\n",
-      " '* **1948:** Claude E. Shannon published \"A Mathematical Theory of '\n",
-      " 'Communication.\"\\n'\n",
-      " '* **The theory of information:** This article established the theory of '\n",
-      " 'information.\\n'\n",
-      " '* **Information entropy:** Shannon introduced the concept of information '\n",
-      " 'entropy for the first time.\\n'\n",
+      " '**Question:**\\n'\n",
       " '\\n'\n",
-      " '**Overall:**\\n'\n",
+      " 'Who published A Mathematical Theory of Communication in 1948?\\n'\n",
       " '\\n'\n",
-      " 'This text is concise and informative. It clearly states the key points in a '\n",
-      " 'clear and concise manner. It also uses clear language and avoids technical '\n",
-      " 'jargon, making it easy to understand.\\n'\n",
+      " '**Answer:**\\n'\n",
       " '\\n'\n",
-      " '**Suggestions:**\\n'\n",
-      " '\\n'\n",
-      " '* **Add a more specific topic:** While the text mentions the beginning of a '\n",
-      " 'journey, it lacks a specific topic. Adding a topic, such as \"Information '\n",
-      " 'entropy and its impact on communication,\" would make the text more '\n",
-      " 'complete.\\n'\n",
-      " '* **Provide a more detailed summary:** The text could be expanded to provide '\n",
-      " \"a more detailed summary of Shannon's article, outlining the main points and \"\n",
-      " 'their significance.\\n'\n",
-      " '* **Include a call to action:** To complete the journey, the text could end '\n",
-      " 'with a call to action, such as \"To learn more about information entropy and '\n",
-      " 'its applications, you can read Shannon\\'s original article.\"\\n'\n",
-      " '\\n'\n",
-      " '**Overall, this text is a well-written and concise summary of the '\n",
-      " \"publication of Shannon's article. With some minor adjustments, it could be \"\n",
-      " 'even more informative and complete.**')\n"
+      " 'Claude E. Shannon.')\n"
      ]
     }
    ],
    "source": [
     "print(\"Sample output:\")\n",
-    "pprint(outputs[0]['output'][0][1])"
+    "pprint(outputs[0]['output'][0]['response'][1])\n",
+    "# pprint(outputs[0]['output'][0][1])"
    ]
   },
   {
