--- a/example/transform/huggingface_model_benchmark_g5.ipynb
+++ b/example/transform/huggingface_model_benchmark_g5.ipynb
@@ -562,7 +562,7 @@
     "config = TransformQAHuggingFaceJsonFormatConfig(\n",
     "    model_config=HuggingfaceModelConfig(\n",
     "            batch_size=64,\n",
-    "            \n",
+    "            model_name=\"google/gemma-7b-it\"\n",
     "        )\n",
     ")\n",
     "client = TransformClient(config)"
