--- a/example/pipeline/pipeline_web_summary.ipynb
+++ b/example/pipeline/pipeline_web_summary.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,21 +35,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: bs4 in /Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages (0.0.2)\n",
-      "Requirement already satisfied: beautifulsoup4 in /Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages (from bs4) (4.12.2)\n",
-      "Requirement already satisfied: soupsieve>1.2 in /Users/lingjiekong/anaconda3/envs/uniflow/lib/python3.10/site-packages (from beautifulsoup4->bs4) (2.5)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!{sys.executable} -m pip install bs4"
+    "!{sys.executable} -m pip install -q bs4"
    ]
   },
   {
