--- a/example/transform/huggingface_model_benchmark_g5.ipynb
+++ b/example/transform/huggingface_model_benchmark_g5.ipynb
@@ -445,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "uniflow",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -463,5 +463,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
